Changes made to HTML

--- a/Travel agency/Index.html
+++ b/Travel agency/Index.html
@@ -141,7 +141,7 @@
     
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 Delicious Bites | 
+        <p>&copy; 2025 Paradise Quest | 
             Follow us on <a href="#" class="text-white"><i class="fa-brands fa-whatsapp mx-1"></i></a>
                          <a href="#" class="text-white"><i class="fa-brands fa-telegram mx-1"></i></a>
                          <a href="#" class="text-white"><i class="fa-brands fa-twitter mx-1"></i></a>
